Fixed the image flickering on hover

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   --card-bgcolor: hsl(216, 50%, 16%);
   --line-color: hsl(215, 32%, 27%);
   --cyan-color: hsl(178, 100%, 50%);
+  --transparent-cyan-color: hsla(178, 100%, 50%, 0.42);
 }
 
 * {
@@ -29,6 +30,7 @@ h1 {
   font-size: 22px;
   color: var(--heading-color);
   font-weight: 500;
+  transition: 0.3s ease;
 }
 
 .hover {
@@ -42,6 +44,7 @@ h1 {
 a {
   text-decoration: none;
   margin-left: 0.2rem;
+  transition: 0.3s ease;
 }
 
 p {
@@ -151,33 +154,29 @@ hr {
     cursor: pointer;
   }
 
-  .hover {
-    display: block;
-    position: absolute;
-    width: 48px;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    z-index: -1;
-  }
-
-  .eth-icon:hover + .hover {
-   z-index: 2;
-  }
-
-  .eth-icon:hover ~ .overlay {
-    z-index: 1;
+  .eth-icon:hover + .overlay {
+   opacity: 1;
   }
 
   .overlay {
     position: absolute;
+    pointer-events: none;
     width: 100%;
     height: 100%;
-    background-color: var(--cyan-color);
+    background-color: var(--transparent-cyan-color);
     top: 0;
-    opacity: 0.3;
-    z-index: -1;
+    opacity: 0;
     border-radius: 8px;
+    transition: all 0.7s ease;
+    
+    img {
+      position: relative;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 48px;
+      height: 48px;
+    }
   }
 
   h1:hover {
